--- a/css/works_content-sp2.css
+++ b/css/works_content-sp2.css
@@ -213,6 +213,10 @@ header {
   .item {
     padding-left: 10px;
   }
+
+  .works_title {
+    margin-top: 0;
+  }
 }
 
 @media screen and (max-width: 767px) {
