--- a/css/works_list.css
+++ b/css/works_list.css
@@ -69,6 +69,35 @@ header {
   /* height: 100vh; */
 }
 
+.portfolio_tree {
+  animation: portfolio_tree 1s ease-in-out infinite alternate-reverse;
+}
+.tree_img {
+  width: 117%;
+  animation: tree_img 1.2s ease-in-out infinite alternate-reverse;
+}
+@keyframes portfolio_tree {
+  0% {
+    transform: translateX(-10px);
+  }
+  100% {
+    transform: translateX(10px);
+  }
+}
+@keyframes tree_img {
+  0% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(5px);
+  }
+}
+
+.tree_img {
+  margin-top: -5px;
+  margin-left: -100px;
+}
+
 .portfolio_title {
   position: absolute;
   top: 10%;
@@ -76,7 +105,7 @@ header {
 }
 
 .portfolio_title01 {
-  font-size: 40px;
+  font-size: 3.2vw;
   font-family: "zen-kaku-gothic-new", sans-serif;
   font-weight: 700;
   font-style: normal;
@@ -86,7 +115,7 @@ header {
 
 .portfolio_title02 {
   position: relative;
-  font-size: 18px;
+  font-size: 1.4vw;
   font-family: "zen-kaku-gothic-new", sans-serif;
   font-weight: 700;
   font-style: normal;
@@ -129,8 +158,11 @@ header {
 }
 
 .works_title-main {
-  font-size: 80px;
+  font-size: 5.8vw;
   margin-bottom: 25px;
+  font-family: "a-otf-ryumin-pr6n", serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
 .works_container {
@@ -139,7 +171,10 @@ header {
 }
 
 .works_list-sub {
-  font-size: 20px;
+  font-size: 1.4vw;
+  font-family: "a-otf-ryumin-pr6n", serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
 #works_wrapper-01,
@@ -223,8 +258,20 @@ header {
     height: 270px;
   }
 
+  .works_title {
+    margin-top: 0;
+  }
+
   .portfolio_title01 {
     font-size: 35px;
+  }
+
+  .works_title-main {
+    font-size: 65px;
+  }
+
+  .works_list-sub {
+    font-size: 20px;
   }
 
   .pc_img,
@@ -234,13 +281,131 @@ header {
   }
 }
 
+.sp_btn,
+.sp_nav_list {
+  display: none;
+}
 @media screen and (max-width: 767px) {
+  .tree_img {
+    width: 68.5vw;
+    margin-top: -1px;
+    margin-left: -20px;
+  }
+
+  @keyframes portfolio_tree {
+    0% {
+      transform: translateX(-5px);
+    }
+    100% {
+      transform: translateX(5px);
+    }
+  }
+
+  @keyframes tree_img {
+    0% {
+      transform: translateY(-1px);
+    }
+    100% {
+      transform: translateY(1px);
+    }
+  }
+
+  .nav_list {
+    display: none;
+  }
+
+  .sp_btn {
+    display: block;
+  }
+
+  .sp_btn {
+    position: absolute;
+    top: 8%;
+    right: 3%;
+    display: block;
+    height: 23px;
+    cursor: pointer;
+    z-index: 2;
+  }
+  .sp_btn span {
+    display: block;
+    width: 9vw;
+    height: 0.5vw;
+    background: #c67039;
+    border-radius: 3px;
+    position: relative;
+    transition: 0.3s;
+  }
+  .sp_btn span::before {
+    content: "";
+    display: block;
+    width: 9vw;
+    height: 0.5vw;
+    background: #c67039;
+    border-radius: 3px;
+    position: absolute;
+    transition: 0.3s;
+  }
+
+  .sp_btn span::before {
+    bottom: 500%;
+  }
+
+  /* .sp_btn.open span {
+    background: transparent;
+  } */
+
+  .sp_btn.open span::before {
+    bottom: 0;
+    transform: rotate(90deg);
+  }
+
+  .sp_btn.open span {
+    top: 0;
+    transform: rotate(-45deg);
+  }
+
+  /* SP版メニュー */
+  .sp_nav_list {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+  }
+
+  .sp_nav_list ul {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .sp_nav_list ul li {
+    color: #fff;
+    padding: 20px;
+    font-size: 18px;
+    font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "メイリオ",
+      "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif;
+    font-weight: bold;
+  }
+
   .works_container {
     display: none;
   }
 
-  .portfolio_tree img {
+  /* .portfolio_tree img {
     width: 67%;
+  } */
+
+  .tree_img {
+    width: 68.5vw;
+    margin-top: -1px;
+    margin-left: -20px;
   }
 
   .portfolio_title {
@@ -250,12 +415,12 @@ header {
   }
 
   .portfolio_title01 {
-    font-size: 24px;
+    font-size: 6.4vw;
     margin-bottom: 10px;
   }
 
   .portfolio_title02 {
-    font-size: 12px;
+    font-size: 3.2vw;
     margin-left: 4px;
   }
 
@@ -265,11 +430,11 @@ header {
   }
 
   .works_title-main {
-    font-size: 50px;
+    font-size: 14vw;
   }
 
   .works_list-sub {
-    font-size: 20px;
+    font-size: 5.6vw;
   }
 
   .sp_works_container {
@@ -316,25 +481,6 @@ header {
     display: block;
   }
 
-  /* .gradation {
-    position: absolute;
-    top: 65%;
-    left: 0;
-    z-index: -2;
-    width: 100%;
-    height: 270px;
-    background: linear-gradient(
-      to bottom,
-      #ffffff00,
-      #dbcb7b 45%,
-      #dbcb7b 70%,
-      #ffffff00
-    );
-    opacity: 0.9;
-    filter: blur(30px);
-    display: block;
-  } */
-
   .works_content {
     width: 66%;
     margin: 0 auto;
@@ -359,7 +505,7 @@ header {
 
 .pc_contact_text {
   text-align: center;
-  font-size: 18px;
+  font-size: 1.2vw;
   line-height: 2.25;
   color: #56402b;
 }
@@ -427,10 +573,34 @@ header {
   display: flex;
   justify-content: flex-end;
   z-index: -1;
+  animation: bottom_img 1s ease-in-out infinite alternate-reverse;
 }
 
 .bottom_tree {
-  width: 802px;
+  width: 117%;
+  animation: bottom_tree 1.2s ease-in-out infinite alternate-reverse;
+}
+
+@keyframes bottom_img {
+  0% {
+    transform: translateX(-10px);
+  }
+  100% {
+    transform: translateX(10px);
+  }
+}
+@keyframes bottom_tree {
+  0% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(5px);
+  }
+}
+
+.bottom_tree {
+  margin-bottom: -5px;
+  /* margin-right: -100px; */
 }
 
 @media screen and (max-width: 1100px) {
@@ -443,13 +613,13 @@ header {
   }
 
   .contact_text {
-    font-size: 16px;
+    font-size: 1.4vw;
   }
 
   .contact_btn {
     width: 300px;
     height: 75px;
-    font-size: 30px;
+    font-size: 35px;
   }
 
   .copyright {
@@ -464,6 +634,7 @@ header {
 
   .bottom_tree {
     width: 70%;
+    margin-right: 0;
   }
 }
 
@@ -476,7 +647,7 @@ header {
     display: block;
     text-align: center;
     color: #56402b;
-    font-size: 14px;
+    font-size: 3.9vw;
     line-height: 1.7;
   }
 
@@ -500,5 +671,29 @@ header {
 
   .copyright {
     font-size: 12px;
+  }
+
+  .bottom_tree {
+    /* width: 68.5vw; */
+    margin-top: -1px;
+    margin-right: 0;
+  }
+
+  @keyframes bottom_img {
+    0% {
+      transform: translateX(-5px);
+    }
+    100% {
+      transform: translateX(5px);
+    }
+  }
+
+  @keyframes bottom_tree {
+    0% {
+      transform: translateY(-1px);
+    }
+    100% {
+      transform: translateY(1px);
+    }
   }
 }
