--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,7 @@ header {
 }
 
 .portfolio_lead-ja {
+  opacity: 0;
   margin-left: 18%;
   line-height: 1.5;
   font-size: 45px;
@@ -202,9 +203,28 @@ header {
 }
 
 .portfolio_lead-en {
+  opacity: 0;
   font-size: 14px;
   margin: 3% 0 0 10%;
   width: 100%;
+  animation-name: portfolio_lead-en;
+  animation-duration: 2s;
+  animation-timing-function: ease-out;
+  animation-delay: 1s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+}
+
+@keyframes portfolio_lead-en {
+  0% {
+    opacity: 0;
+    /* transform: translate3d(30px, 0, 0); */
+  }
+  100% {
+    opacity: 1;
+    /* transform: translate3d(0, 0, 0); */
+  }
 }
 
 .sp_portfolio_lead {
@@ -220,6 +240,7 @@ header {
 }
 
 .top_img {
+  opacity: 0;
   /* // アニメーション設定 */
   animation-name: top_img;
   animation-duration: 2s;
@@ -582,6 +603,7 @@ header {
 }
 
 .scroll_line {
+  position: relative;
   width: 200px;
   height: 3px;
   background-color: #c67039;
