--- a/css/style.css
+++ b/css/style.css
@@ -183,9 +183,9 @@ header {
   writing-mode: vertical-rl;
   font-feature-settings: initial;
   animation-name: portfolio_lead-ja;
-  animation-duration: 2s;
+  animation-duration: 3.5s;
   animation-timing-function: ease-out;
-  animation-delay: 1s;
+  animation-delay: 2.5s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-fill-mode: forwards;
@@ -208,9 +208,9 @@ header {
   margin: 3% 0 0 10%;
   width: 100%;
   animation-name: portfolio_lead-en;
-  animation-duration: 2s;
+  animation-duration: 4s;
   animation-timing-function: ease-out;
-  animation-delay: 1s;
+  animation-delay: 3s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-fill-mode: forwards;
@@ -243,9 +243,9 @@ header {
   opacity: 0;
   /* // アニメーション設定 */
   animation-name: top_img;
-  animation-duration: 2s;
+  animation-duration: 3s;
   animation-timing-function: ease-out;
-  animation-delay: 1s;
+  animation-delay: 0.5s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-fill-mode: forwards;
@@ -254,7 +254,7 @@ header {
 @keyframes top_img {
   0% {
     opacity: 0;
-    transform: translate3d(30px, 0, 0);
+    transform: translate3d(-30px, 0, 0);
   }
   100% {
     opacity: 1;
@@ -278,51 +278,133 @@ header {
   }
 
   .portfolio_top01 {
+    width: 100%;
     height: auto;
   }
 
   .tree_img {
-    width: 140%;
+    width: 72vw;
+    margin-top: -1px;
+    margin-left: -20px;
+  }
+
+  @keyframes portfolio_tree {
+    0% {
+      transform: translateX(-5px);
+    }
+    100% {
+      transform: translateX(5px);
+    }
+  }
+
+  @keyframes tree_img {
+    0% {
+      transform: translateY(-1px);
+    }
+    100% {
+      transform: translateY(1px);
+    }
+  }
+
+  .portfolio_title {
+    top: 8%;
+    left: 0;
+    width: auto;
+    white-space: nowrap;
+    margin-left: 5%;
   }
 
   .portfolio_title01 {
-    font-size: 3.3vw;
-    margin-bottom: 4%;
+    font-size: 6.4vw;
+    margin-bottom: 3%;
   }
 
   .portfolio_title02 {
-    font-size: 1.7vw;
-  }
-
-  .portfolio_top02 {
-    position: absolute;
-    top: 15%;
-    left: 57%;
-  }
-
-  .top_img img {
-    width: 65vw;
+    font-size: 3.2vw;
+    margin-left: 3px;
   }
 
   .portfolio_lead {
-    top: 42%;
+    display: none;
   }
 
-  .portfolio_lead-ja {
-    font-size: 3.6vw;
+  .sp_portfolio_lead {
+    display: block;
+    position: static;
+    margin-left: 9%;
+    width: auto;
+    white-space: nowrap;
   }
 
-  .portfolio_lead-en {
-    font-size: 1.3vw;
+  .sp_portfolio_lead-ja {
+    opacity: 0;
+    line-height: 1.5;
+    font-size: 6.4vw;
+    font-family: "a-otf-ryumin-pr6n", serif;
+    font-weight: 300;
+    font-style: normal;
+    font-feature-settings: initial;
+    writing-mode: horizontal-tb;
+    margin-left: 0;
+    margin-bottom: 30px;
+    animation-name: sp_portfolio_lead-ja;
+    animation-duration: 3.5s;
+    animation-timing-function: ease-out;
+    animation-delay: 2.5s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: forwards;
+  }
+
+  @keyframes sp_portfolio_lead-ja {
+    0% {
+      opacity: 0;
+      /* transform: translate3d(30px, 0, 0); */
+    }
+    100% {
+      opacity: 1;
+      /* transform: translate3d(0, 0, 0); */
+    }
+  }
+
+  .sp_portfolio_lead-en {
+    opacity: 0;
+    font-size: 3.2vw;
+    margin-left: 0;
+    width: 100%;
+    animation-name: sp_portfolio_lead-en;
+    animation-duration: 4s;
+    animation-timing-function: ease-out;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: forwards;
+  }
+
+  @keyframes sp_portfolio_lead-en {
+    0% {
+      opacity: 0;
+      /* transform: translate3d(30px, 0, 0); */
+    }
+    100% {
+      opacity: 1;
+      /* transform: translate3d(0, 0, 0); */
+    }
+  }
+
+  .portfolio_top02 {
+    position: static;
+    width: 100%;
+    margin-top: -5%;
+  }
+
+  .top_img img {
+    width: 100%;
+    margin-top: -20px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  /* #portfolio_top {
-    height: 127vh;
-    margin-bottom: 70%;
-  } */
-
   .portfolio_top01 {
     width: 100%;
     height: auto;
@@ -442,24 +524,6 @@ header {
     flex-direction: column;
   }
 }
-
-/* @media screen and (max-width: 767px) {
-  .portfolio_title01 {
-    font-size: 30px;
-  }
-  .p2 {
-    font-size: 57px;
-  }
-  .p3 {
-    font-size: 16px;
-  }
-  .p4 {
-    font-size: 38px;
-  }
-  .p5 {
-    font-size: 14px;
-  }
-} */
 
 .pc_nav_list {
   position: absolute;
@@ -615,7 +679,7 @@ header {
     position: absolute;
     width: 200px;
     height: 3px;
-    background-color: #ffffff;
+    background-color: #fef3e6;
     margin-left: 35px;
     animation: scrolldown 1.4s ease-in-out infinite;
   }
@@ -651,7 +715,7 @@ header {
   .sp_top_scroll {
     display: block;
     position: static;
-    font-size: 2.2vw;
+    font-size: 2.7vw;
     font-family: "zen-kaku-gothic-new", sans-serif;
     font-weight: 700;
     font-style: normal;
@@ -659,14 +723,37 @@ header {
     margin-top: 15%;
   }
 
-  .sp_top_scroll::after {
-    content: "";
+  .sp_scroll_line {
+    position: relative;
+    top: 20px;
+    left: 50%;
     width: 3px;
-    height: 20vh;
+    height: 260px;
     background-color: #c67039;
-    display: flex;
-    flex-direction: column;
-    margin: 5% auto;
+    /* margin-left: 35px; */
+    overflow: hidden;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 3px;
+      height: 260px;
+      background-color: #ffffff;
+      /* margin-left: 35px; */
+      animation: sp_scrolldown 1.4s ease-in-out infinite;
+    }
+  }
+
+  @keyframes sp_scrolldown {
+    0% {
+      transform: translateY(0%);
+    }
+
+    100% {
+      transform: translateY(100%);
+    }
   }
 
   .mgr-20 {
@@ -817,13 +904,26 @@ header {
   color: #ffffff;
 }
 
-.works_img {
+.works_img1 {
   position: absolute;
   left: 1400px;
   display: flex;
   align-items: flex-end;
   height: 100%;
   z-index: 100;
+}
+
+/* フェードイン(初期値) */
+.js-fadeUp {
+  opacity: 0; /* 最初は非表示 */
+  transform: translateY(30px); /* 下に30pxの位置から */
+  transition: opacity 0.8s, transform 0.8s; /* 透過率と縦方向の移動を0.8秒 */
+}
+/* フェードイン(スクロールした後) */
+.js-fadeUp.is-inview {
+  opacity: 1; /* 表示領域に入ったら表示 */
+  transform: translateY(0); /* 30px上に移動する */
+  transition-delay: 0.5s; /* フェード開始を0.5秒遅らせる */
 }
 
 .sp_portfolio_menu {
@@ -833,10 +933,15 @@ header {
 @media screen and (max-width: 1100px) {
   .service_img img {
     height: auto;
+    width: 100%;
   }
 
   .sp_portfolio_menu {
     display: block;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   #service_contents .portfolio_menu {
@@ -847,10 +952,6 @@ header {
     display: flex;
     flex-direction: column;
     height: auto;
-  }
-
-  .service_img img {
-    width: 100%;
   }
 
   #service_contents .portfolio_menu .menu_title {
@@ -866,11 +967,11 @@ header {
 
   .service_gradation {
     position: absolute;
-    top: 5%;
+    top: 12%;
     left: 0;
     /* z-index: -2; */
     width: 100%;
-    height: 100%;
+    height: 80%;
     background: linear-gradient(
       to bottom,
       #ffffff00,
@@ -883,16 +984,77 @@ header {
   }
 
   .service_card {
-    margin: 80px auto;
+    width: 100%;
+    margin: -30% auto 0;
+    z-index: 300;
   }
 
-  .works_img {
+  .works_img1 {
     position: static;
+    justify-content: flex-end;
     height: auto;
   }
 
-  .works_img img {
-    width: 61%;
+  /* フェードイン(初期値) */
+  .js-fadeUp {
+    opacity: 0; /* 最初は非表示 */
+    transform: translateX(30px); /* 下に30pxの位置から */
+    transition: opacity 0.8s, transform 0.8s; /* 透過率と縦方向の移動を0.8秒 */
+  }
+  /* フェードイン(スクロールした後) */
+  .js-fadeUp.is-inview {
+    opacity: 1; /* 表示領域に入ったら表示 */
+    transform: translateX(0); /* 30px上に移動する */
+    transition-delay: 0.5s; /* フェード開始を0.5秒遅らせる */
+  }
+
+  .service {
+    height: auto;
+  }
+
+  .service_img_box {
+    position: relative;
+    z-index: 200;
+  }
+
+  .sp_portfolio_menu {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .sp_portfolio_menu .menu_title {
+    font-size: 13.3vw;
+    padding-left: 0;
+    margin: 0;
+    margin-bottom: 12%;
+    color: #ffffff;
+  }
+
+  .sp_portfolio_menu .menu_title::before {
+    width: 10vw;
+    margin-right: 3%;
+  }
+
+  .sp_menu_subtitle {
+    text-align: center;
+    font-size: 5.3vw;
+  }
+
+  .service_img {
+    position: static;
+    height: auto;
+    width: 100%;
+  }
+
+  .service_img img {
+    width: 100%;
+  }
+
+  .card {
+    justify-content: center;
+    margin-left: 0;
   }
 }
 
@@ -952,7 +1114,7 @@ header {
   }
 
   .service_card {
-    width: 100%;
+    /* width: 100%; */
     margin: -40% auto 0;
     z-index: 300;
   }
@@ -992,6 +1154,28 @@ header {
 
   .card-text {
     font-size: 4vw;
+  }
+
+  /* フェードイン(初期値) */
+  .js-fadeUp {
+    opacity: 0; /* 最初は非表示 */
+    transform: translateX(10px); /* 下に30pxの位置から */
+    transition: opacity 0.8s, transform 0.8s; /* 透過率と縦方向の移動を0.8秒 */
+  }
+  /* フェードイン(スクロールした後) */
+  .js-fadeUp.is-inview {
+    opacity: 1; /* 表示領域に入ったら表示 */
+    transform: translateX(0); /* 30px上に移動する */
+    transition-delay: 0.5s; /* フェード開始を0.5秒遅らせる */
+  }
+
+  .works_img {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .works_img img {
+    width: 67%;
   }
 }
 
@@ -1126,6 +1310,11 @@ header {
 @media screen and (max-width: 1100px) {
   #works_contents {
     flex-direction: column;
+    height: auto;
+  }
+
+  .works {
+    height: auto;
   }
 
   .works_img {
@@ -1133,13 +1322,32 @@ header {
   }
 
   #works_contents .portfolio_menu {
-    margin-left: 17%;
+    /* margin-left: 17%; */
     margin-right: 0;
-    margin-bottom: 50px;
+    position: static;
+    margin-left: 0;
+    margin-bottom: 11%;
   }
 
   #works_contents .portfolio_menu .menu_title {
     margin-top: 0px;
+    font-size: 13.3vw;
+    padding-left: 0;
+    margin: 0;
+    margin-bottom: 6%;
+    justify-content: center;
+  }
+
+  #works_contents .portfolio_menu .menu_title::before {
+    width: 10vw;
+    margin-right: 3%;
+  }
+
+  #works_contents .portfolio_menu .menu_subtitle {
+    font-size: 5.3vw;
+    margin-left: 0;
+    text-align: center;
+    padding-left: 25px;
   }
 
   .works_circle-img {
@@ -1150,20 +1358,64 @@ header {
     width: 90%;
   }
 
+  .works_btn {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 4.2vw;
+    width: 39vw;
+    height: 14%;
+    border-radius: 7.4vw;
+  }
+
+  .works_btn::after {
+    width: 2.1vw;
+    height: 2.1vw;
+    margin-left: 1%;
+  }
+
   .about_img-1 {
     display: block;
+    animation: about_img-1 1s ease-in-out infinite alternate-reverse;
+  }
+
+  .about_img01 {
+    margin-left: -8px;
+    margin-bottom: -5px;
+    animation: about_img01 1.2s ease-in-out infinite alternate-reverse;
+  }
+
+  @keyframes about_img-1 {
+    0% {
+      transform: translateX(-3px);
+    }
+    100% {
+      transform: translateX(3px);
+    }
+  }
+  @keyframes about_img01 {
+    0% {
+      transform: translateY(-10px);
+    }
+    100% {
+      transform: translateY(10px);
+    }
+  }
+
+  .about_img01 {
+    margin-left: 0;
+  }
+
+  .about_img01 img {
+    width: 50%;
+  }
+
+  .about_img02 {
+    display: none;
   }
 }
 
 @media screen and (max-width: 767px) {
-  #works_contents {
-    height: auto;
-  }
-
-  .works {
-    height: auto;
-  }
-
   #works_contents .portfolio_menu {
     position: static;
     margin-left: 0;
@@ -1195,7 +1447,7 @@ header {
     left: 50%;
     transform: translateX(-50%);
     font-size: 4.2vw;
-    width: 46.1vw;
+    width: 45.3vw;
     height: 14%;
     border-radius: 7.4vw;
   }
@@ -1212,7 +1464,7 @@ header {
 
   .about_img01 {
     margin-left: -5px;
-    margin-bottom: -5%;
+    margin-bottom: -5px;
     animation: about_img01 1.2s ease-in-out infinite alternate-reverse;
   }
 
@@ -1316,11 +1568,60 @@ header {
 @media screen and (max-width: 1100px) {
   #about_contents {
     flex-direction: column;
-    height: 100%;
+    height: auto;
   }
 
   #about_contents .portfolio_menu {
     margin-bottom: 50px;
+    position: static;
+    margin-left: 0;
+  }
+
+  #about_contents .portfolio_menu .menu_title {
+    font-size: 13.3vw;
+    padding-left: 0;
+    margin: 0;
+    margin-bottom: 6%;
+    justify-content: center;
+  }
+
+  #about_contents .portfolio_menu .menu_title::before {
+    width: 10vw;
+    margin-right: 3%;
+  }
+
+  #about_contents .portfolio_menu .menu_subtitle {
+    font-size: 5.3vw;
+    margin-left: 0;
+    text-align: center;
+    padding-left: 25px;
+  }
+
+  .about_portrait img {
+    width: 72.8vw;
+  }
+
+  .name {
+    display: block;
+    text-align: center;
+    margin-bottom: 16%;
+  }
+
+  .name01 {
+    font-size: 7.4vw;
+    padding-right: 0;
+    margin-bottom: 4%;
+  }
+
+  .name02 {
+    font-size: 4.5vw;
+  }
+
+  .profile_text {
+    display: flex;
+    justify-content: center;
+    margin: 0 15%;
+    font-size: 2.7vw;
   }
 
   .about_portrait {
@@ -1499,8 +1800,53 @@ header {
 @media screen and (max-width: 1100px) {
   #contact_contents {
     flex-direction: column;
-    height: 100%;
+    height: auto;
     margin-left: 0;
+  }
+
+  #contact_contents {
+    height: auto;
+  }
+
+  #contact_contents .portfolio_menu .menu_text {
+    display: none;
+  }
+
+  #contact_contents .portfolio_menu {
+    position: static;
+    margin-left: 0;
+    margin-bottom: 11%;
+  }
+
+  #contact_contents .portfolio_menu .menu_title {
+    font-size: 13.3vw;
+    padding-left: 0;
+    margin: 0;
+    margin-bottom: 6%;
+    justify-content: center;
+  }
+
+  #contact_contents .portfolio_menu .menu_title::before {
+    width: 10vw;
+    margin-right: 3%;
+  }
+
+  #contact_contents .portfolio_menu .menu_subtitle {
+    font-size: 5.3vw;
+    margin-left: 0;
+    text-align: center;
+    padding-left: 25px;
+    margin-bottom: 45px;
+  }
+
+  #contact_contents .portfolio_menu .sp_menu_text {
+    display: block;
+    margin-left: 0;
+    font-size: 2.7vw;
+    width: 60%;
+    margin: auto;
+    color: #56402b;
+    line-height: 2.25;
   }
 
   .contact_gradation {
@@ -1688,6 +2034,68 @@ textarea.c-form_input {
 }
 
 @media screen and (max-width: 1100px) {
+  .customer-info {
+    margin-left: 0;
+    width: 100%;
+  }
+
+  .c-form {
+    margin-left: 0;
+    width: 76%;
+    display: flex;
+    flex-direction: column;
+    margin: 88px auto 0;
+  }
+
+  .c-form_label {
+    font-size: 30px;
+  }
+
+  .c-form_input {
+    font-size: 20px;
+    height: 40px;
+    padding-bottom: 15px;
+  }
+
+  .textarea.c-form_input {
+    height: 230px;
+  }
+
+  .c-form_submit {
+    margin-top: 40px;
+  }
+
+  .c-form_submit button {
+    font-size: 25px;
+    padding: 17px 75px;
+  }
+
+  .footer_img-1 {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .footer_img01 {
+    margin-right: -10px;
+    animation: footer_img01 1.2s ease-in-out infinite alternate-reverse;
+  }
+  @keyframes footer_img {
+    0% {
+      transform: translateX(-5px);
+    }
+    100% {
+      transform: translateX(5px);
+    }
+  }
+  @keyframes footer_img01 {
+    0% {
+      transform: translateY(-1px);
+    }
+    100% {
+      transform: translateY(1px);
+    }
+  }
+
   footer {
     height: 100%;
   }
@@ -1709,6 +2117,7 @@ textarea.c-form_input {
     width: 100%;
     text-align: center;
     right: 0;
+    font-size: 1.8vw;
   }
 
   .bottom_img {
@@ -1734,6 +2143,18 @@ textarea.c-form_input {
     display: flex;
     flex-direction: column;
     margin: 88px auto 0;
+  }
+
+  .c-form_label {
+    font-size: 16px;
+  }
+
+  .c-form_input {
+    height: auto;
+    font-size: 16px;
+    width: 90%;
+    padding-bottom: 0;
+    padding: 10px;
   }
 
   .c-form_submit {
