--- a/css/thanks.css
+++ b/css/thanks.css
@@ -87,3 +87,45 @@ body {
   justify-content: flex-end;
   align-items: flex-end;
 }
+
+@media screen and (max-width: 1100px) {
+  .img01 img {
+    width: 60%;
+  }
+
+  .img02 img {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .img01 {
+    position: relative;
+  }
+
+  .img01 img {
+    position: absolute;
+    bottom: 50px;
+    left: -40%;
+    width: 100%;
+  }
+
+  .img02 {
+    position: relative;
+  }
+
+  .img02 img {
+    position: absolute;
+    top: 100px;
+    right: -170px;
+    width: 80%;
+  }
+
+  .thanks_title {
+    font-size: 20px;
+  }
+
+  .thanks_text {
+    font-size: 14px;
+  }
+}
