--- a/css/style.css
+++ b/css/style.css
@@ -761,6 +761,18 @@ header {
   }
 }
 
+.portfolio_menu {
+  opacity: 0; /* 最初は非表示 */
+  transform: translateX(30px); /* 下に30pxの位置から */
+  transition: opacity 0.8s, transform 1s; /* 透過率と縦方向の移動を0.8秒 */
+}
+
+.portfolio_menu.is-inview {
+  opacity: 1; /* 表示領域に入ったら表示 */
+  transform: translateX(0); /* 30px上に移動する */
+  transition-delay: 0.5s; /* フェード開始を0.5秒遅らせる */
+}
+
 #service_contents {
   position: relative;
   height: 100%;
@@ -1705,10 +1717,6 @@ header {
 
 .contact_gradation {
   position: absolute;
-  /* right: 20px; */
-  /* top: 0;
-  left: 30%; */
-  /* z-index: -2; */
   width: 1250px;
   height: 100%;
   background: linear-gradient(
@@ -1722,16 +1730,16 @@ header {
   filter: blur(30px);
 }
 
-#contact_contents .portfolio_menu {
+.contact_portfolio_menu {
   /* margin-left: 37%; */
   z-index: 100;
 }
 
-#contact_contents .portfolio_menu .menu_title {
+.contact_portfolio_menu .menu_title {
   color: #ffffff;
 }
 
-#contact_contents .portfolio_menu .menu_text {
+.contact_portfolio_menu .menu_text {
   font-size: 16px;
   color: #56402b;
   line-height: 2.25;
@@ -1793,7 +1801,7 @@ header {
   margin: 47px auto 0;
 }
 
-#contact_contents .portfolio_menu .sp_menu_text {
+.contact_portfolio_menu .sp_menu_text {
   display: none;
 }
 
@@ -1804,21 +1812,17 @@ header {
     margin-left: 0;
   }
 
-  #contact_contents {
-    height: auto;
-  }
-
-  #contact_contents .portfolio_menu .menu_text {
+  .contact_portfolio_menu .menu_text {
     display: none;
   }
 
-  #contact_contents .portfolio_menu {
+  .contact_portfolio_menu {
     position: static;
     margin-left: 0;
     margin-bottom: 11%;
   }
 
-  #contact_contents .portfolio_menu .menu_title {
+  .contact_portfolio_menu .menu_title {
     font-size: 13.3vw;
     padding-left: 0;
     margin: 0;
@@ -1826,12 +1830,12 @@ header {
     justify-content: center;
   }
 
-  #contact_contents .portfolio_menu .menu_title::before {
+  .contact_portfolio_menu .menu_title::before {
     width: 10vw;
     margin-right: 3%;
   }
 
-  #contact_contents .portfolio_menu .menu_subtitle {
+  .contact_portfolio_menu .menu_subtitle {
     font-size: 5.3vw;
     margin-left: 0;
     text-align: center;
@@ -1839,7 +1843,7 @@ header {
     margin-bottom: 80px;
   }
 
-  #contact_contents .portfolio_menu .sp_menu_text {
+  .contact_portfolio_menu .sp_menu_text {
     display: block;
     margin-left: 0;
     font-size: 2.7vw;
@@ -1878,17 +1882,17 @@ header {
     height: auto;
   }
 
-  #contact_contents .portfolio_menu .menu_text {
+  .contact_portfolio_menu .menu_text {
     display: none;
   }
 
-  #contact_contents .portfolio_menu {
+  .contact_portfolio_menu {
     position: static;
     margin-left: 0;
     margin-bottom: 11%;
   }
 
-  #contact_contents .portfolio_menu .menu_title {
+  .contact_portfolio_menu .menu_title {
     font-size: 13.3vw;
     padding-left: 0;
     margin: 0;
@@ -1896,12 +1900,12 @@ header {
     justify-content: center;
   }
 
-  #contact_contents .portfolio_menu .menu_title::before {
+  .contact_portfolio_menu .menu_title::before {
     width: 10vw;
     margin-right: 3%;
   }
 
-  #contact_contents .portfolio_menu .menu_subtitle {
+  .contact_portfolio_menu .menu_subtitle {
     font-size: 5.3vw;
     margin-left: 0;
     text-align: center;
@@ -1909,7 +1913,7 @@ header {
     margin-bottom: 45px;
   }
 
-  #contact_contents .portfolio_menu .sp_menu_text {
+  .contact_portfolio_menu .sp_menu_text {
     display: block;
     margin-left: 0;
     font-size: 4vw;
