--- a/css/style.css
+++ b/css/style.css
@@ -176,8 +176,9 @@ header {
   margin-left: 18%;
   line-height: 1.5;
   font-size: 45px;
-  font-family: "a-otf-ryumin-pr6n", serif;
-  font-weight: 300;
+  font-family: fot-tsukuaoldmin-pr6n, YuMincho, 游明朝, Times New Roman,
+    Hiragino Mincho ProN, HGS明朝B, ＭＳ Ｐ明朝, serif;
+  font-weight: 400;
   font-style: normal;
   -ms-writing-mode: tb-rl;
   writing-mode: vertical-rl;
@@ -191,14 +192,16 @@ header {
   animation-fill-mode: forwards;
 }
 
+.mgt-5 {
+  margin-top: 5px;
+}
+
 @keyframes portfolio_lead-ja {
   0% {
     opacity: 0;
-    /* transform: translate3d(30px, 0, 0); */
   }
   100% {
     opacity: 1;
-    /* transform: translate3d(0, 0, 0); */
   }
 }
 
@@ -207,10 +210,13 @@ header {
   font-size: 14px;
   margin: 3% 0 0 10%;
   width: 100%;
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
   animation-name: portfolio_lead-en;
   animation-duration: 4s;
   animation-timing-function: ease-out;
-  animation-delay: 3s;
+  animation-delay: 4s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-fill-mode: forwards;
@@ -340,8 +346,9 @@ header {
     opacity: 0;
     line-height: 1.5;
     font-size: 6.4vw;
-    font-family: "a-otf-ryumin-pr6n", serif;
-    font-weight: 300;
+    font-family: fot-tsukuaoldmin-pr6n, YuMincho, 游明朝, Times New Roman,
+      Hiragino Mincho ProN, HGS明朝B, ＭＳ Ｐ明朝, serif;
+    font-weight: 400;
     font-style: normal;
     font-feature-settings: initial;
     writing-mode: horizontal-tb;
@@ -375,7 +382,7 @@ header {
     animation-name: sp_portfolio_lead-en;
     animation-duration: 4s;
     animation-timing-function: ease-out;
-    animation-delay: 3s;
+    animation-delay: 4s;
     animation-iteration-count: 1;
     animation-direction: normal;
     animation-fill-mode: forwards;
@@ -681,7 +688,7 @@ header {
     height: 3px;
     background-color: #fef3e6;
     margin-left: 35px;
-    animation: scrolldown 1.4s ease-in-out infinite;
+    animation: scrolldown 2s ease-in-out infinite;
   }
 }
 
@@ -898,7 +905,8 @@ header {
 
 .card_wrapper {
   align-content: space-around;
-  margin-left: 52px;
+  width: 368px;
+  margin-left: 4%;
 }
 
 .card_box {
@@ -1236,6 +1244,12 @@ header {
   border-radius: 32px;
   background: white;
   color: #56402b;
+  border: 1.5px solid #56402b;
+}
+
+.works_btn:hover {
+  color: white;
+  background-color: #c67039;
 }
 
 .works_btn::after {
@@ -1245,6 +1259,11 @@ header {
   border-top: 1.5px solid #56402b; /* くの字を山なりに見た時、左側の太さと色 */
   border-right: 1.5px solid #56402b; /* くの字を山なりに見た時、右側の太さと色 */
   transform: rotate(45deg); /* くの字の向き */
+}
+
+.works_btn:hover::after {
+  border-top: 1.5px solid white;
+  border-right: 1.5px solid white;
 }
 
 .swiper-slide {
