--- a/css/style.css
+++ b/css/style.css
@@ -793,7 +793,7 @@ header {
 }
 
 #service_contents .portfolio_menu .menu_title {
-  color: #ffffff;
+  color: #c67039;
 }
 
 .service_img {
@@ -835,14 +835,13 @@ header {
 }
 
 .menu_title {
-  margin: 130px 0 40px;
-  font-size: 60px;
-  font-family: "a-otf-ryumin-pr6n", serif;
-  font-weight: 300;
-  font-style: normal;
+  margin: 140px 0 40px;
+  font-size: 50px;
+  font-family: "HiraMinProN-W6";
+  font-feature-settings: initial;
   padding-left: 20px;
   display: flex;
-  /* color: #ffffff; */
+  white-space: nowrap;
 }
 
 .menu_title::before {
@@ -857,10 +856,9 @@ header {
 .menu_subtitle {
   margin-left: 100px;
   font-size: 25px;
-  font-family: "a-otf-ryumin-pr6n", serif;
-  font-weight: 300;
-  font-style: normal;
-  padding-left: 25px;
+  font-family: "HiraMinProN-W6";
+  font-feature-settings: initial;
+  padding-left: 35px;
   white-space: nowrap;
 }
 
@@ -1301,12 +1299,20 @@ header {
   vertical-align: middle; /*上下中央*/
 }
 
+.swiper-wrapper {
+  position: relative;
+}
+
 .swiper-slide img {
   height: auto;
   width: 100%;
   object-fit: contain;
   margin: 0 auto;
   object-position: center;
+}
+
+.swiper-slide:hover img:nth-of-type(2) {
+  opacity: 0;
 }
 
 .about_img-1 {
@@ -1319,7 +1325,7 @@ header {
   display: flex;
   align-items: flex-end;
   z-index: 100;
-  margin-left: 5%;
+  /* margin-left: 5%; */
   margin-bottom: -5%;
   animation: about_img01 1.2s ease-in-out infinite alternate-reverse;
 }
@@ -1542,13 +1548,13 @@ header {
 
 .about_portrait {
   margin: auto 0;
-  margin-left: -4%;
+  margin-left: -6%;
 }
 
 .profile_box {
   color: #56402b;
   z-index: 200;
-  margin-top: 10%;
+  margin-top: 8%;
   margin-left: 4%;
   width: 102%;
 }
@@ -1752,10 +1758,6 @@ header {
 .contact_portfolio_menu {
   /* margin-left: 37%; */
   z-index: 100;
-}
-
-.contact_portfolio_menu .menu_title {
-  color: #ffffff;
 }
 
 .contact_portfolio_menu .menu_text {
